# folkering-daq

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
apps/bandpass_filter/: Cargo.toml
apps/bandpass_filter/src/: lib.rs
apps/fft_analyzer/: Cargo.toml
apps/fft_analyzer/src/: lib.rs
apps/lowpass_filter/: Cargo.toml
apps/lowpass_filter/src/: lib.rs
apps/peak_detector/: Cargo.toml
boot/: limine.conf
kernel/: Cargo.toml  aarch64-folkering-daq.json  build.rs  linker-qemu.ld  linker.ld
kernel/src/: lib.rs  main.rs  panic.rs  platform.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: exceptions.rs  gic.rs  mod.rs  timer.rs  uart.rs
kernel/src/arch/x86_64/: mod.rs
kernel/src/daq/: mod.rs  opendaq.rs  ringbuffer.rs  signal.rs
kernel/src/drivers/: cyw43.rs  gem.rs  mod.rs  pci.rs  rp1_gpio.rs  rp1_i2c.rs  rp1_spi.rs  sdhci.rs  spi_isr.rs  xhci.rs
kernel/src/memory/: jit.rs  mod.rs  pagetable.rs
kernel/src/net/: hotswap.rs  mdns.rs  mod.rs  socket.rs  tcp_shell.rs  websocket.rs  wifi.rs
kernel/src/silverfir/: aarch64_emit.rs  compiler.rs  mod.rs  parser.rs  runtime.rs
kernel/src/storage/: mod.rs  sdcard.rs
kernel/src/task/: mod.rs
kernel/src/usb/: mod.rs  sirius.rs
kernel/src/wasm/: host_functions.rs  mod.rs  runtime.rs
tools/: build.sh  build_image.sh  deploy-proxmox.sh  deploy_to_pi.py  deploy_wasm.py  run-qemu.ps1  run-qemu.sh
wasm-apps/: bandpass_filter.wasm  fft_analyzer.wasm  lowpass_filter.wasm  peak_detector.wasm
(+1 files in other folders)
