[package]
name = "folkering-daq-kernel"
version = "0.1.0"
edition = "2021"
authors = ["PQTech / Folkering OS Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
# Core utilities
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"

# Memory allocation
linked_list_allocator = { version = "0.10", default-features = false, features = ["const_mut_refs", "use_spin"] }

# Data structures (no_std)
hashbrown = { version = "0.14", default-features = false, features = ["inline-more", "ahash"] }

# TCP/IP network stack (no_std)
[dependencies.smoltcp]
version = "0.12"
default-features = false
features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "proto-dhcpv4",
    "proto-dns",
    "socket-dhcpv4",
    "socket-dns",
    "socket-icmp",
    "socket-tcp",
    "socket-udp",
]

# Limine boot protocol (supports aarch64)
[dependencies.limine]
version = "0.5"
default-features = false

[features]
default = []

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
strip = false

[[bin]]
name = "kernel"
path = "src/main.rs"

[lib]
name = "folkering_daq_kernel"
path = "src/lib.rs"
